--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!--=============== CSS ===============-->
         <link rel="stylesheet" href="">
 
-        <title>Responsive car website - Bedimcode</title>
+        <title>Car Landing Page</title>
     </head>
     <body>
         <!--==================== HEADER ====================-->
